Fix horizontal scroll on mobile for /sponsoring
Instead of giving the entire page a horizontal scroll only make the
table with packages scrollable.

--- a/_sass/sponsoring.scss
+++ b/_sass/sponsoring.scss
@@ -10,6 +10,13 @@
     &[src*="no"] {
     }
   }
+
+  .table-overflow-wrapper {
+    overflow-x: scroll;
+  }
+  .table {
+    min-width: 700px;
+  }
 }
 
 #become-sponsor {
